# try-cuda

./: CMakeLists.txt  README.md  main.cu  matmul-cpu.cxx  matmul-cuda.cu  matmul-result.txt  pi-cpu.cxx  pi-cuda.cu  pi-result.txt  reduction-result.txt  reduction.cu  utility.h
